@@ -29,6 +29,7 @@ import Assistant.Threads.MountWatcher
 #endif
 import Assistant.Threads.NetWatcher
 import Assistant.Threads.Upgrader
+import Assistant.Threads.UpgradeWatcher
 import Assistant.Threads.TransferScanner
 import Assistant.Threads.TransferPoller
 import Assistant.Threads.ConfigMonitor
@@ -152,6 +153,7 @@ startDaemon assistant foreground startdelay cannotrun listenhost startbrowser = 
 #endif
 				, assist $ netWatcherThread
 				, assist $ upgraderThread urlrenderer
+				, assist $ upgradWatcherThread
 				, assist $ netWatcherFallbackThread
 				, assist $ transferScannerThread urlrenderer
 				, assist $ cronnerThread urlrenderer
